# EasyprQML

./: MyEasyPr.pro  MyEasyPr.pro.user.465559b  README.md  fonts.qrc  getplatelicense.cpp  getplatelicense.h  ico.qrc  main.cpp  qml.qrc
button/: Basebtn.qml  Basegrid.qml  Baseopt.qml  closebtn.qml
easyprsource/: CMakeLists.txt  CMakeLists2.txt  myeasyprforqml
easyprsource/include/easypr/: config.h
easyprsource/test/: mytest.cpp
main/: Main.qml  Resize.qml
mid/: Leftopt.qml  Listdelegate.qml  Platedelegate.qml  Reslistview.qml  Rightlist.qml  Showimage.qml
top/: Buttombar.qml  Pop.qml  SettingPage.qml  Top.qml
